# roguelike

./: .gitignore  CMakeLists.txt  README.md  makefile
libs/clog/: clog.hpp
libs/cprof/: profiler.hpp
libs/ecs/: ecs.hpp  entity.hpp  store.hpp
libs/events/: event.hpp  keyboard-event.hpp  mouse-event.hpp  window-event.hpp
libs/noise/: perlin.hpp
libs/utils/: date.hpp  rand.hpp  time.hpp
src/: application.cpp  application.hpp  inputs.hpp  main.cpp  settings.cpp  settings.hpp  window.cpp  window.hpp
src/game/: camera.hpp  chunk.hpp  chunk_manager.hpp  game.cpp  game.hpp  spell_manager.hpp  tile.hpp  tilemap.hpp
src/game/components/: age.hpp  flammable.hpp  health.hpp  movement.hpp  player_input.hpp  position.hpp  render.hpp  spellbook.hpp  timer.hpp
src/game/systems/: age.cpp  camera.cpp  fire.cpp  health.cpp  input.cpp  movement.cpp  movement_input.cpp  render.cpp  render_debug.cpp  spells.cpp  timer.cpp
src/render/: renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
tests/: chunk_manager.cpp
